[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://title_screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/fade_in.tscn" type="PackedScene" id=3]
[ext_resource path="res://Controls.tscn" type="PackedScene" id=4]

[node name="PBL" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TitleScreen" parent="." instance=ExtResource( 2 )]

[node name="Fade In" parent="." instance=ExtResource( 3 )]
visible = false
margin_top = 0.0
margin_bottom = 0.0

[node name="Fade In2" parent="." instance=ExtResource( 3 )]
visible = false
margin_top = 0.0
margin_bottom = 0.0

[node name="Controls" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="fade_finished" from="Fade In" to="." method="_on_Fade_In_fade_finished"]
[connection signal="fade_finished" from="Fade In2" to="." method="_on_Fade_In2_fade_finished"]
